<resources>
    <string name="app_name">미세코치</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="network_type">종류</string>
    <string name="time_range">시간</string>
    <string name="acc_range">정확도</string>
    <string name="separator"> : </string>
    <string name="range"> ~ </string>
    <string name="start_date">시작 날짜</string>
    <string name="start_time">시작 시간</string>
    <string name="end_date">종료 날짜</string>
    <string name="end_time">종료 시간</string>
    <string name="search">검색</string>
    <string name="title_map">Map</string>
    <string name="title_dust">Dust</string>
    <string name="title_setting">Setting</string>
    <string name="title_map_test">Map Test</string>
    <string name="gps_request_type">GPS Request Type</string>
    <string name="tpye_gps">GPS</string>
    <string name="type_network">Network</string>
    <string name="type_passive">Passive</string>
    <string name="threshold">Threshold</string>
    <string name="acc">Accuracy</string>
    <string name="num_sate">Satellite Count</string>
    <string name="elapsed_time">Time</string>
    <string name="timeout">Timeout</string>
    <string name="iterate">Iterate</string>

    <!-- junhan -->
    <string name="CONNECT_DEVICE">Connect your AirSensor Device</string>
    <string name="AIRSENSOR_UNIT">㎍/㎥</string>
    <string name="title_activity_login">Sign in</string>
    <string name="MY_BLE_SCAN">검색</string>
    <string name="MY_BLE_SCANNING">중단</string>
    <string name="APP_BACKGROUND_WORKER_TAG">com.perfect.freshair.my_background_work</string>
    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="regist">Regist</string>
    <string name="sign_in_short">Sign in</string>
    <string name="sign_in_fail">ID or Password is incorrect</string>
    <string name="sign_up_short">Sign up</string>
    <string name="sign_up_fail">ID is duplicate</string>
    <string name="error_invalid_id">5자 이상, 20자 이하, 알파벳,숫자 허용</string>
    <string name="error_invalid_password">6자 이상, 20자 이하, 알파벳,숫자,일부 특수문자 허용</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing id
        completions."
    </string>

    <string name="nav_drawer_open">open drawer</string>
    <string name="nav_drawer_close">close drawer</string>
    <string-array name="nav_strings">
        <item>디바이스 등록</item>
        <item>로그아웃</item>
        <item>오늘 미세지도</item>
        <item>어제 미세지도</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="google_login_oauth_client_id">595417554422-ct8h7o3rqlhmop7468m5htcc30b9sp0v.apps.googleusercontent.com</string>
</resources>
