<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_dust" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_map" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_setting" />
        <item
            android:id="@+id/nav_map_test"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_map_test" />
    </group>
</menu>
