<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.MapsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/text_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="@string/network_type" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/separator_margin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="@string/separator" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/select_type"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/text_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="@string/time_range" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/separator_margin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="@string/separator" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_date"
                android:textSize="@dimen/text_size"
                android:text="@string/start_date" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_time"
                android:textSize="@dimen/text_size"
                android:text="@string/start_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/text_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/separator_margin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="   " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/separator_margin"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/range" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_date"
                android:textSize="@dimen/text_size"
                android:text="@string/end_date" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_time"
                android:textSize="@dimen/text_size"
                android:text="@string/end_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="@dimen/text_width"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="@string/acc_range" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/separator_margin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="@string/separator" />

            <EditText
                android:id="@+id/min_acc"
                android:layout_width="@dimen/acc_edit_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/separator_margin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size"
                android:text="@string/range" />

            <EditText
                android:id="@+id/max_acc"
                android:layout_width="@dimen/acc_edit_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search"
                android:layout_gravity="right"
                android:text="@string/search" />
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </fragment>

</LinearLayout>